--- a/docs/main.css
+++ b/docs/main.css
@@ -1,7 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
-*/
-
-
 /* root-variables for easy usage */
 :root {
   --primaryColor: #b3d4c6;
@@ -291,6 +287,7 @@ label.error {
 
 /* --------------- End of Cart ---------------- */
 
+/* --------------- Validation ---------------- */
 
 .wrapper{
   position: absolute;
@@ -353,3 +350,5 @@ label.error {
   font-size: 14px;
   transition: all 0.5s ease;
 }
+
+/* --------------- End of Validation ---------------- */
